--- a/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/FileParseScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/FileParseScrobbleView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Scrubbler.Scrobbling.Scrobbler.CSVScrobbleView"
+﻿<UserControl x:Class="Scrubbler.Scrobbling.Scrobbler.FileParseScrobbleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -57,20 +57,10 @@
     </ComboBox>
 
     <TextBlock Grid.Row="2" Grid.Column="0" Text="File:" VerticalAlignment="Center"/>
-    <TextBox Grid.Row="2" Grid.Column="2" Text="{Binding CSVFilePath, UpdateSourceTrigger=PropertyChanged}"/>
-    <Button x:Name="LoadCSVFileDialog" Grid.Row="2" Grid.Column="4" Content=" ... "/>
-    <Button x:Name="ParseCSVFile" Grid.Row="2" Grid.Column="6" Content="Parse">
-      <Button.Style>
-        <Style TargetType="Button">
-          <Style.Triggers>
-            <DataTrigger Binding="{Binding CSVFilePath, TargetNullValue=''}" Value="">
-              <Setter Property="IsEnabled" Value="False"/>
-            </DataTrigger>
-          </Style.Triggers>
-        </Style>
-      </Button.Style>
-    </Button>
-    <Button x:Name="OpenCSVParserSettings" Grid.Row="0" Grid.Column="8" Content="Settings"/>
+    <TextBox Grid.Row="2" Grid.Column="2" Text="{Binding FilePath, UpdateSourceTrigger=PropertyChanged}"/>
+    <Button x:Name="LoadFileDialog" Grid.Row="2" Grid.Column="4" Content=" ... "/>
+    <Button x:Name="ParseFile" Grid.Row="2" Grid.Column="6" Content="Parse" IsEnabled="{Binding CanParse}"/>
+    <Button x:Name="OpenParserSettings" Grid.Row="0" Grid.Column="8" Content="Settings" IsEnabled="{Binding CanShowSettings}"/>
 
     <scrobbling:SelectScrobblesControl Grid.Row="4" Grid.ColumnSpan="9"/>
 
