--- a/Last.fm-Scrubbler-WPF/Helper/FileParser/ConfigureCSVParserView.xaml
+++ b/Last.fm-Scrubbler-WPF/Helper/FileParser/ConfigureCSVParserView.xaml
@@ -1,14 +1,16 @@
-﻿<Window x:Class="Scrubbler.Scrobbling.Scrobbler.ConfigureCSVParserView"
+﻿<Window x:Class="Scrubbler.Helper.FileParser.ConfigureCSVParserView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="Configure CSV Parser" Height="300" Width="300" ResizeMode="NoResize" Loaded="Window_Loaded" >
+        Title="Configure CSV Parser" Height="325" Width="300" ResizeMode="NoResize" Loaded="Window_Loaded" >
 
   <Grid>
     <Grid.RowDefinitions>
+      <RowDefinition Height="5"/>
+      <RowDefinition Height="Auto"/>
       <RowDefinition Height="5"/>
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="5"/>
@@ -60,12 +62,14 @@
     <TextBlock Grid.Row="13" Grid.Column="1" Text="Delimiters:"/>
     <TextBox Grid.Row="13" Grid.Column="3" Text="{Binding Delimiters}"/>
 
-    <TextBlock Grid.Row="15" Grid.Column="1" Text="Encoding:"/>
-    <ComboBox Grid.Row="15" Grid.Column="3" ItemsSource="{Binding AvailableEncodings}" SelectedItem="{Binding SelectedEncoding}" DisplayMemberPath="EncodingName"/>
+    <CheckBox Grid.Row="15" Grid.Column="1" Grid.ColumnSpan="3" IsChecked="{Binding HasFieldsEnclosedInQuotes}" Content="Has Fields Enclosed In Quotes"/>
 
-    <Button x:Name="LoadDefaults" Grid.Row="17" Grid.Column="0" Grid.ColumnSpan="4" Content="Load Defaults" HorizontalAlignment="Right"/>
+    <TextBlock Grid.Row="17" Grid.Column="1" Text="Encoding:"/>
+    <ComboBox Grid.Row="17" Grid.Column="3" ItemsSource="{Binding AvailableEncodings}" SelectedItem="{Binding SelectedEncoding}" DisplayMemberPath="EncodingName"/>
 
-    <StackPanel Grid.Row="19" Grid.Column="1" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right">
+    <Button x:Name="LoadDefaults" Grid.Row="19" Grid.Column="0" Grid.ColumnSpan="4" Content="Load Defaults" HorizontalAlignment="Right"/>
+
+    <StackPanel Grid.Row="21" Grid.Column="1" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right">
       <Button x:Name="SaveAndClose" Content="Save &amp; Close" HorizontalAlignment="Right" Margin="0,0,5,0"/>
       <Button x:Name="Cancel" Content="Cancel" HorizontalAlignment="Right"/>
     </StackPanel>
