--- a/Last.fm-Scrubbler-WPF/MainView.xaml
+++ b/Last.fm-Scrubbler-WPF/MainView.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:cal="http://www.caliburnproject.org"
+        xmlns:scrobbling="clr-namespace:Scrubbler.Scrobbling"
+        xmlns:ef="clr-namespace:Scrubbler.ExtraFunctions"
         mc:Ignorable="d"
         Title="{Binding TitleString}" Height="400" Width="650" Icon="Resources\scrubbler_64.ico">
 
@@ -13,12 +15,26 @@
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
 
-    <TabControl Grid.Row="0" x:Name="Items">
+    <TabControl Grid.Row="0" ItemsSource="{Binding Tabs}" SelectedIndex="0">
       <TabControl.ItemTemplate>
         <DataTemplate>
-          <TextBlock Text="{Binding DisplayName}"/>
+          <TextBlock Text="{Binding Header}"/>
         </DataTemplate>
       </TabControl.ItemTemplate>
+      <TabControl.ContentTemplate>
+        <DataTemplate>
+          <ContentControl Content="{Binding}">
+            <ContentControl.Resources>
+              <DataTemplate DataType="{x:Type scrobbling:ScrobblerViewModel}">
+                <scrobbling:ScrobblerView/>
+              </DataTemplate>
+              <DataTemplate DataType="{x:Type ef:ExtraFunctionsViewModel}">
+                <ef:ExtraFunctionsView/>
+              </DataTemplate>
+            </ContentControl.Resources>
+          </ContentControl>
+        </DataTemplate>
+      </TabControl.ContentTemplate>
     </TabControl>
 
     <StatusBar Grid.Row="1">
