--- a/Last.fm-Scrubbler-WPF/Scrobbling/Data/ArtistResultView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Data/ArtistResultView.xaml
@@ -3,12 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:Scrubbler.Scrobbling.Data"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
 
   <Grid>
     <ScrollViewer>
-      <ItemsControl x:Name="Items">
+      <ItemsControl ItemsSource="{Binding Results}">
         <ItemsControl.ItemContainerStyle>
           <Style>
             <Setter Property="FrameworkElement.Margin" Value="5"/>
@@ -19,6 +20,11 @@
             <UniformGrid HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
           </ItemsPanelTemplate>
         </ItemsControl.ItemsPanel>
+        <ItemsControl.ItemTemplate>
+          <DataTemplate>
+            <local:FetchedArtistView/>
+          </DataTemplate>
+        </ItemsControl.ItemTemplate>
       </ItemsControl>
     </ScrollViewer>
   </Grid>
